ui/task-priority-too-high.stderr
warning: unused variable: `cx`
  --> ui/task-priority-too-high.rs:12:13
   |
12 |     fn init(cx: init::Context) -> (Shared, Local, init::Monotonics) {
   |             ^^ help: if this is intentional, prefix it with an underscore: `_cx`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0080]: evaluation of constant value failed
 --> ui/task-priority-too-high.rs:3:1
  |
3 | #[rtic::app(device = lm3s6965)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Maximum priority used by interrupt vector 'I2C0' is more than supported by hardware', $DIR/ui/task-priority-too-high.rs:3:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` (in Nightly builds, run with -Z macro-backtrace for more info)
